# data_engineering_project

./: .gitignore  Dockerfile  README.md  api.py  pyproject.toml  requirements.txt
.github/workflows/: unit_testing.yml
app/: api.py
tests/: test_api.py  test_model.py
titanic_model/: train.py
