[tool.poetry]
name = "data_engineering_project"
version = "0.1.0"
description = ""
authors = ["Danny Beachnau <DannyBeachnau@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.1"
scikit-learn = "^1.2.2"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
ruff = "^0.0.264"
httpx = "^0.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
